# diophantine

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  hnf.rs  lib.rs  linalg.rs  lll.rs  proptest.rs  util.rs
